--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "angular": "1.7.7",
-    "angular-translate": "2.18.1"
+    "angular-translate": "2.18.1",
+    "angular-translate-loader-static-files": "2.18.1"
   },
   "scripts": {
     "build": "webpack",
