--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "angular-translate-loader-static-files": "2.18.1"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -w",
     "start": "http-server ./app -a localhost -p 8010 -c-1"
   },
   "author": "kseniyavaladzko",
