--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
   "scripts": {
     "build": "webpack -w",
     "start": "http-server ./app -a localhost -p 8010 -c-1",
-    "test": "karma start karma.conf.js"
+    "test": "karma start --reporters kjhtml"
   },
   "author": "kseniyavaladzko",
   "license": "ISC",
   "description": "My task",
   "devDependencies": {
-    "angular-mocks": "^1.7.5",
+    "angular-mocks": "1.7.5",
     "css-loader": "2.1.1",
     "jasmine-core": "3.3.0",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma": "3.1.4",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "1.4.0",
     "lodash": "4.17.11",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
