--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular": "1.7.7",
     "angular-translate": "2.18.1",
-    "angular-translate-loader-static-files": "2.18.1"
+    "angular-translate-loader-static-files": "2.18.1",
+    "jqlite": "0.2.42"
   },
   "scripts": {
     "build": "webpack -w",
@@ -15,14 +16,16 @@
   "license": "ISC",
   "description": "My task",
   "devDependencies": {
-    "angular-mocks": "1.7.5",
+    "html-webpack-plugin": "3.2.0",
+    "lodash": "4.17.11",
+    "angular-mocks": "1.7.8",
     "css-loader": "2.1.1",
     "jasmine-core": "3.3.0",
-    "karma": "3.1.4",
+    "karma": "4.0.1",
     "karma-chrome-launcher": "2.2.0",
-    "karma-jasmine": "1.1.2",
+    "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
-    "lodash": "4.17.11",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
