--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "minetask",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "1.7.7",
+    "angular": " 1.7.7",
     "angular-translate": "2.18.1",
     "angular-translate-loader-static-files": "2.18.1",
-    "jqlite": "0.2.42"
+    "lodash": "4.17.11"
   },
   "scripts": {
     "build": "webpack -w",
@@ -16,10 +16,10 @@
   "license": "ISC",
   "description": "My task",
   "devDependencies": {
-    "html-webpack-plugin": "3.2.0",
-    "lodash": "4.17.11",
     "angular-mocks": "1.7.8",
     "css-loader": "2.1.1",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "2.30.1",
     "jasmine-core": "3.3.0",
     "karma": "4.0.1",
     "karma-chrome-launcher": "2.2.0",
