--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
-    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-ng-html2js-preprocessor": "1.0.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
